# rust_server

./: .env  Cargo.toml  git_logs.sh  readme.md  sqlx-data.json
migrations/: 20231205080609_database.sql
shell/: migrate.sh
src/: main.rs
src/hello/: data.rs  hello.rs  mod.rs
src/my_repsonse/: mod.rs
