[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sqlx = {version="0.7.3", features=["mysql","chrono","macros"]}
sqlx-cli = "0.7.3"
sqlx-macros = "0.7.3"
sqlx-migrate = "0.7.1"
